# Robotics-Studio-1

./: cart_map.pgm  cart_map.yaml  groundtruth_map.yaml
sprint1/: CMakeLists.txt
sprint2/: CMakeLists.txt
sprint2/src/: sprint.cpp
src/Sprint4/: CMakeLists.txt  package.xml
src/Sprint4/launch/: sprint4.launch.py
src/Sprint4/src/: sprint.cpp
src/robot_localization/: CMakeLists.txt
src/robot_localization/params/: ekf.yaml
src/sprint1/src/: Lidar.cpp  nth_point.cpp
src/sprint2/: package.xml
src/sprint3/: CMakeLists.txt  package.xml
src/sprint3/src/: Doxyfile  mine.cpp  overlay.cpp  sprint.cpp
src/sprint3/src/html/: annotated.html  classCylinderDetector-members.html  classCylinderDetector.html  classCylinderDetector__inherit__graph.map  classCylinderDetector__inherit__graph.md5  classMapOverlayNode-members.html  classMapOverlayNode.html  classMapOverlayNode__inherit__graph.map  classMapOverlayNode__inherit__graph.md5  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherits.html  mine_8cpp.html  overlay_8cpp.html  (+5 more)
src/sprint4/: CMakeLists.txt  README.md  package.xml
src/sprint4/GUI/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/sprint4/file_mods/: champ.urdf.xacro  gazebo.launch.py  navigation.rviz  outdoor.world
src/sprint4/launch/: project.launch.py  project_spot.launch.py
src/sprint4/maps/: domestic.yaml  industrial.yaml
src/sprint4/src/: EnvNavigation.cpp  object_detection.cpp  spot_navigation.cpp  spot_the_circles.cpp
src/sprint4/test/: test.txt
src/week2lab/: CMakeLists.txt
src/week2lab/src/: laser_processor.cpp
src/week4lab/: CMakeLists.txt
src/week4lab/install/: setup.sh
src/week4lab/src/: DeadReckoningNode.cpp
week1lab/: CMakeLists.txt
week4lab/install/: local_setup.sh
week4lab/log/: latest_build
week4lab/src/: movement_node.cpp
week5lab/: CMakeLists.txt  package.xml
week5lab/src/: MapProcessor.cpp  ScanToImageNode.cpp
(+46 files in other folders)
